--- a/main.html
+++ b/main.html
@@ -1,16 +1,27 @@
 <!DOCTYPE html>
-
 <html>
+	<head>
+	</head>
+		<body>
 
-<head>
-	<link rel="stylesheet" href="styles.css">
-</head>
-
-<body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
-</body>
-
+<table style="background-color: yellow; border: 1px solid black;">
+  <caption>Student Details</caption>
+  <tr style="border: 1px solid black;">
+    <th style="border: 1px solid black;">NAME</th>
+    <th style="border: 1px solid black;">AGE</th>
+    <th style="border: 1px solid black;">BRANCH</th>
+  </tr>
+  <tr style="border: 1px solid black;">
+    <td style="border: 1px solid black;">Shaw</td>
+    <td style="border: 1px solid black;">20</td>
+    <td style="border: 1px solid black;">CSE</td>
+  </tr>
+  <tr style="border: 1px solid black;">
+    <td style="border: 1px solid black;">Adil</td>
+    <td style="border: 1px solid black;">21</td>
+    <td style="border: 1px solid black;">ECE</td>
+  </tr>
+  </tr>
+</table>
+		</body>
 </html>
